# shake-docker

./: .gitignore  LICENSE  shake-docker.cabal  shake-docker.hs
