name:                shake-docker
version:             0.1.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Pavel Kogan <pkogan@gmail.com>
maintainer:          Pavel Kogan <pkogan@gmail.com>
build-type:          Simple
cabal-version:       >=1.10

executable shake-docker
  main-is:             shake-docker.hs
  build-depends:       base >=4.7 && <4.8
                     , base-prelude
                     , safe
                     , shake
  ghc-options:         -Wall
  default-language:    Haskell2010
